# ths-electro

./: .env  .gitignore  .gitmodules  .htpasswd  README.md  docker-compose.dev.yaml  docker-compose.pgadmin.yaml  docker-compose.yaml  nginx.conf  pom.xml
calculations/: Cargo.toml  Dockerfile  docker-compose.yaml
calculations/src/: calculation.rs  data.rs  dtos.rs  lib.rs  main.rs  models.rs  queries.rs  routes.rs
calculations/src/data/: dbcontext.rs
calculations/src/dtos/: accounting_hour.rs  additional_cost.rs  calculation.rs  contract_type.rs  day_zone.rs  fixed_tariff.rs  half_peak_tariff.rs  hour_tariff.rs  net_power_plan_hours.rs  net_power_price.rs  off_peak_tariff.rs  peak_tariff.rs  power_level.rs  power_wholesale_price.rs  price_category.rs  price_for_over_consuming.rs  voltage_level.rs  weekend.rs
calculations/src/handlers/: accounting_hour.rs  additional_cost.rs  calculation.rs  contract_type.rs  day_zone.rs  fixed_tariff.rs  half_peak_tariff.rs  hour_tariff.rs  net_power_plan_hours.rs  net_power_price.rs  off_peak_tariff.rs  peak_tariff.rs  power_level.rs  power_wholesale_price.rs  price_category.rs  price_for_over_consuming.rs  price_for_under_consuming.rs  voltage_level.rs  weekend.rs
calculations/src/mappers/: accounting_hour.rs  additional_cost.rs  contract_type.rs  day_zone.rs  fixed_tariff.rs  half_peak_tariff.rs  hour_tariff.rs  net_power_plan_hours.rs  net_power_price.rs  off_peak_tariff.rs  peak_tariff.rs  power_level.rs  power_wholesale_price.rs  price_category.rs  price_for_over_consuming.rs  price_for_under_consuming.rs  voltage_level.rs  (+1 more)
(+255 files in other folders)
